--- a/doc/papers/15-RSS_aicogscirobo2015/references.bib
+++ b/doc/papers/15-RSS_aicogscirobo2015/references.bib
@@ -25,7 +25,7 @@
 @INPROCEEDINGS{Hoey99spudd,
     author = {Jesse Hoey and Robert St-aubin and Alan Hu and Craig Boutilier},
     title = {SPUDD: Stochastic planning using decision diagrams},
-    booktitle = {In Proceedings of the Fifteenth Conference on Uncertainty in Artificial Intelligence},
+    booktitle = {Proc. of 15th Conference on Uncertainty in Artificial Intelligence},
     year = {1999},
     pages = {279--288},
     publisher = {Morgan Kaufmann}
@@ -60,4 +60,34 @@
   url={http://books.google.fr/books?id=fXJEAAAAIAAJ},
   year={1960},
   publisher={Published jointly by the Technology Press of the Massachusetts Institute of Technology and}
+}
+
+% Factored MDP
+@Article{BoDeGo00,
+  author = {Boutilier, C. and Dearden, R. and Goldszmidt, M.},
+  title = {Stochastic dynamic programming with factored representations},
+  journal = {Artificial Intelligence},
+  number = {121},
+  volume = {1-2}, 
+  pages = {49-–107},
+  year = 2000
+}
+
+
+%policy represented as a compact decision list
+@InProceedings{KoPa00,
+  author = {Koller, D. and Parr, R.},
+  title = {Policy iteration for factored MDPs},
+  booktitle = {Proc. of 16th Conference on Uncertainty in Artificial Intelligence (UAI)},
+  pages = {326-–334},
+  year = 2000
+}
+
+@Article{GuKo03,
+  author = {Guestrin, C. and Koller, D. and Parr, R. and Venkataraman, S.},
+  title = {Efficient Solution Algorithms for Factored MDPs},
+  journal = {Journal of Artificial Intelligence Research},
+  volume =  {19}
+  pages = {399-468},
+  year = 2003
 }
