corrected a few typos

--- a/doc/papers/15-RSS_aicogscirobo2015/intro.tex
+++ b/doc/papers/15-RSS_aicogscirobo2015/intro.tex
@@ -23,7 +23,7 @@ Output: planning, execution and monitoring of a behavior (policy) implementing t
 % Analysis of standard techniques
 
 A standard way of approaching this problem is to model the problem as an MDP, apply a standard solver to produce the policy and then execute the policy, monitoring its success.
-However, the execution of a policy generated from standard MDP techniques require the full evaluation of the current state in order to determine the actions to be performed. When the state is composed by several independent variables, all of them must be evaluated in order to properly choose the next action.
+However, the execution of a policy generated from standard MDP techniques requires the full evaluation of the current state in order to determine the actions to be performed. When the state is composed by several independent variables, all of them must be evaluated in order to properly choose the next action.
 This can be achieved in two ways: 1) \emph{passive observability} in which sensor processing routines are implemented to automatically determine at any time the value of all the variables needed to assess the current state, 2) \emph{active observability}, in which sensor processing to determine the value of each variable can be activated on demand.
 The problem with the first approach is that it forces the system to execute a lot of computation for sensor processing, most of which is not really needed at each time.
 Obviously, it is also possible a mixed approach in which a subset of variables can be continuously observed, while another subset will be observed only when needed. Typically, we want to apply \emph{active observability} for all those variables that require high computational load for determining their value (this is a typical case for variables determined through image processing procedures).
