--- a/doc/papers/15-RSS_aicogscirobo2015/references.bib
+++ b/doc/papers/15-RSS_aicogscirobo2015/references.bib
@@ -87,7 +87,7 @@
   author = {Guestrin, C. and Koller, D. and Parr, R. and Venkataraman, S.},
   title = {Efficient Solution Algorithms for Factored MDPs},
   journal = {Journal of Artificial Intelligence Research},
-  volume =  {19}
+  volume =  {19},
   pages = {399-468},
   year = 2003
 }
