beginning the integration of PRUs into ROS

--- a/doc/papers/15-RSS_aicogscirobo2015/MDP_PNP.tex
+++ b/doc/papers/15-RSS_aicogscirobo2015/MDP_PNP.tex
@@ -35,7 +35,7 @@ MDPs can be solved efficiently using standard algorithms like \emph{Value Iterat
 \section{Activity Descriptions}
 
 The overall description of robot's goals and activities is formed by two parts:
-1) Progressive Processing Units (PRU) \cite{CaMoZi01}, denoting the tasks to be executed;
+1) Progressive Reasonning Units (PRU) \cite{CaMoZi01}, denoting the tasks to be executed;
 2) Execution Rules (ER), denoting execution conditions, action failures and recovery procedures for these tasks.
 
 The overall procedure of the working system is the following:
