--- a/doc/D51/D51.tex
+++ b/doc/D51/D51.tex
@@ -24,8 +24,8 @@
   \noindent
   \begin{center}
   \textbf{
-  {\centering\includegraphics[height=3cm,bb=0 0 371 145]{../logoCHISTERA2014.png}}\\
-  %{\centering\includegraphics[height=3cm]{../logoCHISTERA2014.eps}}\\
+  {\centering\includegraphics[height=3cm,bb=0 0 371 145]{../fig/logoCHISTERA2014.png}}\\
+  %{\centering\includegraphics[height=3cm]{../fig/logoCHISTERA2014.eps}}\\
    {\centering\Large COACHES project, CHIST-ERA 2014 program}
   }
   \end{center}
@@ -80,8 +80,8 @@
 \date{April 2015 }
 
 \begin{document}
-\includegraphics[height=3cm]{../logoUNICAEN.jpg}
-\includegraphics[height=3cm]{../logoSapienza.png}
+\includegraphics[height=3cm]{../fig/logoUNICAEN.jpg}
+\includegraphics[height=3cm]{../fig/logoSapienza.png}
 
 
 \makemadtitle
@@ -104,7 +104,7 @@ The copyright in this document is the property of the COACHES Consortium. This d
 
 \begin{figure}
 \includegraphics[width=0.95\textwidth]{COACHES_swarch.png}
-\caption{COACHES software architecture}
+\caption{COACHES software architecture - Conceptual view}
 \label{fig:swarch}
 \end{figure}
 
@@ -114,7 +114,7 @@ In this document the software architecture developed within the
 context of the COACHES project is described.
 
 Design solutions regarding the middleware chosen for implementing the entire system are discussed,
-according to the modules shown in Fig. \ref{fig:swarch}).
+according to the modules shown in Fig. \ref{fig:swarch}.
 Subsequent implementation of the software components during the project will follow  these  specifications,  thus  simplifying  their  integration  in  the demonstrators. 
 A detailed description of the interface between the modules will be developed at a later stage, where more details on the single components will be provided.
 
@@ -126,15 +126,15 @@ easy to extend and/or adapt the capabilities of the system during the whole leng
 the  project  (especially  to  integrate  and  test  various  algorithms  and/or  sensors).  Such 
 an open architecture will also simplify and optimize integration efficiency as well as re-use of assets in other projects or products. 
 
-The reminder of this document is organized as follows.
+The remainder of this document is organized as follows.
 First, the choice of the middleware is discussed, then the main software components and the
 set-up of a 2D simulation environment and the collection of data sets for testing the developments are described.
 Finally, the version management system that will be used to manage the development is illustrated.
 
 \section{Middleware}
 
-For the development of the software robotics components, the Robot Operating System (ROS)\footnote{www.ros.org}, which is the standard middleware for robotics applications, has been selected.
-In particular, the last stable version ROS Indigo and the last LTS (Long Term Support) version of the Linux/Ubuntu Operating System will be used.
+For the development of the software robotics components, the Robot Operating System (ROS)\footnote{www.ros.org}, that is the standard middleware for robotics applications, has been selected.
+In particular, the latest stable version ROS Indigo and the latest LTS (Long Term Support) version of the Linux/Ubuntu Operating System will be used.
 
 ROS provides the middleware to share information among the many modules implementing various functionalities on each robot. Moreover, an interface (ROS-through-TCP) will be realized in order to share information among the robots and between each robot and other components of the system.
 
@@ -147,11 +147,11 @@ In this section, the main robotic software components that will be development f
 The main robotic software components that will be realized within the COACHES project are related to the following project tasks.
 \begin{itemize}
 \item T1.1 KB modeling is a subtask concerning the semantic map, the knowledge-based  environment modeling to describe the environment, the objects, persons, their locations and spatial relations. A predicate langage will be defined and given in D1.1 for the KB modeling
-\item T1.2 KB reasoning is subtask dedicated to develop reasoning methods using spatial and commonsense reasoning to derive from the predicate base new knowledge and goals to accomplish.
+\item T1.2 KB reasoning is subtask dedicated to develop reasoning methods using spatial and commonsense reasoning to derive from the predicate based new knowledge and goals to accomplish.
 \item T2.1 Image Processing is  a subtask dedicated to image processing to extract features and to use the predicate langage of T1.1 to describe them and send them to T1.1
 \item T2.2 Situation Awareness is a subtask dedicated to detect situations to be handled such as abnormal objects in the scene or abnormal behavior of humans. Such situations lead to goal generation sent to T1.2.
 \item T3.1 Multimodal HRI techniques  will be implemented, including speech recognition and synthesis, people detection and tracking, people identification through the use of special markers (e.g., RFID or bar code reading). This module allows the robot and human to interact and exchange requests and information. 
-\item T3.2 Human needs estimation is a subtask dedicated to develop Bayesian reasoning using information coming from the Multimodal interface and the KB of T1.1 to estimate the assistance needed by a human (escorting, advertising, guiding, providing information, ...). 
+\item T3.2 Human needs estimation is a subtask dedicated to develop Bayesian reasoning using information coming from the Multimodal interface and from the KB of T1.2 to estimate the assistance needed by a human (escorting, advertising, guiding, providing information, ...). 
 \item T4.1 Robust navigation techniques for safe navigation in a populated environment will be developed. This module receives location to target from T4.2
 \item T4.2 Multi-robot planning is dedicated to develop multi-robot planning using MDPs to compute policies for robots to accomplish different missions such as escorting, guiding, informing, advertising and patrolling. 
 \end{itemize}
@@ -168,26 +168,28 @@ The main robotic software components that will be realized within the COACHES pr
 
 \subsection{Interfaces between software components}
 
-The interfaces between modules consist of the interaction between the perception parts, the reasoning part and the decision-making part. The perception parts consists of scene analysis and understanding (WP2) abd the multi-modal interface (WP3) send information to the reasoning module (WP1) which derives knowledge and goals necessary to the decision and planning module (WP4) to compute the behavior policies of robots. 
+The interfaces between modules consist of the interaction between the perception parts, the reasoning part and the decision-making part. The perception parts consists of scene analysis and understanding (WP2) and the multi-modal interface parts (WP3) send information to the reasoning modules (WP1) that derives knowledge and goals necessary to the decision and planning modules (WP4) to compute the behavior policies of the robots. 
 \begin{itemize}
-\item Interface T2.1/T2.2 (image processing/situation awarness) and T1.2 (reasoning): T2.1 uses images and video to extract features used for annotating the extracted data. The annotation provide useful information for evaluating the processing algorithms. The element annotated will be the persons, groups and objects in the environment and will be used  in T2.2 to update the semantic map.The semantic map of the environment is formed by two components: a metric map and a set of semantic annotations related to the metric map. The semantic annotations are expressed as predicates in a Prolog-like language. These predicates are then used to perform reasoning to derive new knowledge and to generate new goals.
-\item Interface T3.1/T3.2 (multimodal interface/human needs) and T1.2 (reasoning): T3.1 will use speech recognition and synthesis, people detection and tracking, people identification through the use of special markers (e.g., RFID or bar code reading) to send useful information to T3.2 about the need and the activities of a person. These information will be used to T1.2 to derive the assistance mission. 
-\item Interface T1.2/T1.1 (KB-modeling and reasoning) to T4.2 (Multi-robot planning): The KB-modeling and reasoning generates a list of goals to be accomplished and send it to T4.2 module. This module computes a strategy to accomplish these goals using MDPs. The result is a behavior policy for each robot. 
-\item Interfrace T4.2 and T4.1: The policy behavior dictates to the robot to move to a destination. This specific navigation goal is sent to T4.1 which is in charge of computing a safe trajectory to the goal destination. 
-\item Interface T4.2 and T3.1: the policy behavior can dictate to the robot to provide multi-modal information using the multi-modal interface. T4.2 can ask for showing a map with a path to a requested destination, restaurant, shop, ...
+\item Interface between T2.1/T2.2 (image processing/situation awarness) and T1.2 (reasoning): T2.1 uses images and video to extract features used for annotating the extracted data. The annotation provides useful information for evaluating the processing algorithms. The annotated elements will be the persons, groups and objects in the environment and will be used  in T2.2 to update the semantic map.The semantic map of the environment is formed by two components: a metric map and a set of semantic annotations related to the metric map. The semantic annotations are expressed as predicates in a Prolog-like language. These predicates are then used to perform reasoning to derive new knowledge and to generate new goals.
+\item Interface between T3.1/T3.2 (multimodal interface/human needs) and T1.2 (reasoning): T3.1 will use speech recognition and synthesis, people detection and tracking, people identification through the use of special markers (e.g., RFID or bar code reading) to send useful information to T3.2 about the need and the activities of a person. These information will be sent to T1.2 to derive the assistance missions. 
+\item Interface between T1.2/T1.1 (KB-modeling and reasoning) to T4.2 (Multi-robot planning): The KB-modeling and reasoning generates a list of goals to be accomplished and send it to T4.2 module. This module computes a strategy to accomplish these goals using MDPs. The result is a behavior policy for each robot. 
+\item Interface between T4.2 and T4.1: The policy behavior dictates to the robot to move to a destination. This specific navigation goal is sent to T4.1 that is in charge of computing a safe trajectory to the goal destination. 
+\item Interface between T4.2 and T3.1: the policy behavior can dictate to the robot to provide multi-modal information using the multi-modal interface. For example, T4.2 can ask for showing a map with a path to a requested destination, restaurant, shop, ...
 \end{itemize}
- Finally the policy function computed by T4.2 module is send to the different effectors of the robots for navigation, dialogue of person, ... To make the execution robust and fault-tolerant, we propose to transform policies into Petri-Net plans which makes the execution monitoring more graceful. This part is described in delivrable D4.1
+ Finally the policy function computed by T4.2 module is sent to the various effectors of the robots for navigation, dialogue of person, ... To make the execution robust and fault-tolerant, we propose to transform MDP policies into Petri-Net plans that makes the execution monitoring more graceful. This part is described in delivrable D4.1.
 \subsection {ROS-based implementation}
+
+The actual implementation of the modules using ROS closely follows the conceptual architecture, but the access to some data like the robot position makes the diagram a little more complex. Figure \ref{fig:archi} shows the current simulation ROS-graph.
 
 \begin{figure}
 \includegraphics[width=0.95\textwidth]{noname.png}
-\caption{The COACHES software architecture}
+\caption{COACHES software architecture - ROS modules}
 \label{fig:archi}
 \end{figure}
 
 \section{2D Simulation Environment}
 
-The simulation environment is based on 2D Stage simulator, which is integrated in the ROS infrastructure. The choice of a 2D simulator (instead of a 3D one) is motivated by: 1) the need of modeling and testing high-level behaviors of the robot that does not involve 3D perception, 2) the possibility of using the simulator for multiple robots and other moving elements representing people in the environment, 3) the possibility of using the simulator on standard laptop, thus not requiring advanced graphical cards for running 3D simulations.
+The simulation environment is based on Stage, a 2D simulator integrated in the ROS infrastructure. The choice of a 2D simulator (instead of a 3D one) is motivated by: 1) the need of modeling and testing high-level behaviors of the robot that do not involve 3D perception, 2) the possibility of using the simulator for multiple robots and other moving elements representing people in the environment, 3) the possibility of using the simulator on standard laptops, thus not requiring advanced graphical cards for running 3D simulations.
 
 \begin{figure}
 \includegraphics[width=0.95\textwidth]{Rive1.png}
@@ -196,12 +198,12 @@ The simulation environment is based on 2D Stage simulator, which is integrated i
 \end{figure}
 
 
-In the Stage simulator the following map of the \emph{Rive de l'orne} shopping center has been realized. In Figure \ref{fig:stage} a section of the shopping mall in which we will deploy the prototypes is shown.
+In the Stage simulator, a map of the \emph{Rive de l'orne} shopping center has been realized. In Figure \ref{fig:stage}, a section of the shopping mall in which we will deploy the prototypes is shown.
 Additional maps have been realized for reproducing the environments of the partners in which some experiments will be performed.
 
-The Stage environment models one or more robots that have the same 2D sensor and actuator configurations of the real ones and some additional mobile obstacles that represent people moving in the environment. Several behaviors can be tested in this simulated environment such as: 2D perception of human behaviors, human-robot social navigation (e.g., following a person or guiding a person), safe navigation in the environment.
+The Stage environment models one or more robots that have the same 2D sensor and actuator configurations as the real robots and some additional mobile obstacles that represent people moving in the environment. Several behaviors can be tested in this simulated environment such as: 2D perception of human behaviors, human-robot social navigation (e.g., following a person or guiding a person), safe navigation in the environment.
 
-The Stage environment has been fully realized and tested and this configuration will be used as a reference also for the development of the real robotic system.
+The Stage environment has been fully realized and tested, and this configuration will be used as a reference also for the development of the real robotic system.
 
 \section{Data sets}
 
@@ -220,11 +222,10 @@ The data sets will be made available soon to the all the partners in order to de
 
 \section{Version management system}
 
-In order to manage the development of the software by all the partners of the project, we have supported the team from University of Caen in the set up of a GIT repository for the software.
+In order to facilitate the development of the software by all the partners of the project, the team from University of Caen has set up a GIT repository for the software and for the documents.
 The repository is accessible only by the project partners and it is organized as follows.
 
-The 'coaches/software' folder contains source code, libraries and binary code 
-divided in the following sub-folders:
+The 'coaches/software' folder contains source code, libraries and binary code divided in the following sub-folders:
 
 \begin{itemize}
 \item \emph{src}:       contains (non-ROS) source code maintained in the coaches repository
@@ -248,6 +249,7 @@ The \emph{ros} folder contains a Catkin workspace (which is the standard buildin
 \item \emph{t32\_human\_needs\_estimation}: software developed for Task T3.2;
 \item \emph{t41\_robust\_navigation}: software developed for Task T4.1;
 \item \emph{t42\_multi\_robot\_planning}: software developed for Task T4.2;
+\item \emph{shared}: software developed for linking tasks altogether, centralizing common information;
 \end{itemize}
 
 
