--- a/doc/D52/D52.tex
+++ b/doc/D52/D52.tex
@@ -78,12 +78,12 @@
 
 \makemadtitle
 
-\vspace*{1.0in}
+\vspace*{1.0cm}
 \begin{abstract}
-This document describes 4 use cases expected to develop for the final demonstration. 
+This document describes several use cases expected to be developed for testing the system and for the final demonstration. 
 \end{abstract}
 
-\vspace*{1.5in}
+\vspace*{1.0cm}
 
 \fbox{
 \begin{minipage}{1.0\textwidth}
