LI added 15-ICSR

--- a/doc/D31/D311.tex
+++ b/doc/D31/D311.tex
@@ -85,7 +85,7 @@
 
 \vspace*{1.0in}
 \begin{abstract}
-This document describes methods and techniques for multi-modal human-robot interaction. 
+This document describes methods and techniques for multi-modal human-robot interaction developed within Task 3.1. 
 \end{abstract}
 
 \vspace*{1.5in}
@@ -101,6 +101,12 @@ The copyright in this document is the property of the COACHES Consortium. This d
 
 \newpage
 
+\input{D311_intro}
 
+\input{D311_speech}
+
+\input{D311_GUI}
+
+\input{D311_usecases}
 
 \end{document}
