Included some new use cases

--- a/doc/papers/15-ICSR/main.tex
+++ b/doc/papers/15-ICSR/main.tex
@@ -5,6 +5,8 @@
 \usepackage[hang]{caption}
 %\usepackage{subcaption}
 
+\usepackage{color} %for comments
+
 \renewcommand{\baselinestretch}{0.98}
 
 \def\coaches{{\tt COACHES} }
