15-ICSR added more stuff in system description

--- a/doc/papers/15-ICSR/main.tex
+++ b/doc/papers/15-ICSR/main.tex
@@ -30,7 +30,7 @@ Sapienza University of Rome, Italy.}
 %\input{related}
 \input{coaches}
 \input{system}
-%\input{validation}
+\input{implementation}
 %\input{conclu}
 
 \bibliographystyle{splncs03}
