15-ICSR more text and figure

--- a/doc/papers/15-ICSR/main.tex
+++ b/doc/papers/15-ICSR/main.tex
@@ -13,9 +13,9 @@
 
 %\captionsetup[table]{skip=10pt}
 
-\title{Design of social robots assisting people in shopping centers}
+\title{Personalized short-term multi-modal interaction for social robots assisting customers in shopping centers}
 
-\author{... Luca Iocchi ...}
+\author{... Luca , Mayte, Laurent, Abdel-Illah, ...}
 
 \institute{Dept. of Computer, Control and Management Engineering\\
 Sapienza University of Rome, Italy.}
