--- a/doc/papers/15-ICSR/main.tex
+++ b/doc/papers/15-ICSR/main.tex
@@ -27,14 +27,14 @@ Sapienza University of Rome, Italy.}
 \input{abstract}
 
 \input{intro}
-%\input{related}
+\input{related}
 \input{coaches}
 \input{system}
 \input{implementation}
 %\input{conclu}
 
 \bibliographystyle{splncs03}
-\bibliography{local} 
+\bibliography{refs} 
 %\bibliography{../../bib/2000-2004,../../bib/2005-2009,../../bib/2010-2014,local}  
 
 \end{document}
